Dummy_Package_for_scratch_org/main/default/objects/Kanban_Board__c/fields/Columns_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Columns_SOQL__c</fullName>
    <inlineHelpText>SOQL Query to retrieve the columns. Id and Name fields will be used to generate the list.</inlineHelpText>
    <label>Columns from SOQL</label>
    <length>20480</length>
    <type>LongTextArea</type>
</CustomField>