Dummy_Package_for_scratch_org/main/default/objects/Kanban_Board__c/fields/Field_to_read_update__c.field-meta.xml
<CustomField>
    <fullName>Field_to_read_update__c</fullName>
    <inlineHelpText>Field to read/update for each Item. In &quot;object.field&quot; format</inlineHelpText>
    <label>Field to read/update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>