Dummy_Package_for_scratch_org/main/default/objects/Kanban_Board__c/fields/JSON_Settings__c.field-meta.xml
<CustomField>
    <fullName>JSON_Settings__c</fullName>
    <label>JSON Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>